--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,8 @@ import { API_URL } from 'astro:env/client';
                         <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/Hidden.svg" alt="Hide Password" class="show-icon" style="width: 20px;height: 20px;cursor: pointer;">
                     </div>
                 </div>
+                <!--idk I guess it detects it and guesses this to be the submit button????????????? -->
+                <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Element/form -->
                 <div class="input-group" style="padding-top: 50px;">
                     <button class="sanchez-regular">Login</button>
                 </div>
