i forgor to add this

--- a/src/pages/SignUp/index.astro
+++ b/src/pages/SignUp/index.astro
@@ -70,6 +70,7 @@ import { API_URL } from 'astro:env/client';
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
+                    'Access-Control-Allow-Origin': '*'
                 },
                 body: JSON.stringify(jsonData),
                 credentials: 'include' // do your magic
